--- a/src/main/metadata-au/classes/RetailTaskHelper.cls
+++ b/src/main/metadata-au/classes/RetailTaskHelper.cls
@@ -1,4 +1,5 @@
-public with sharing class RetailTaskHelper {
+public with sharing class RetailTaskHelper 
+{
     public static Set<ID> vehicleIds = new Set<ID>();
     public static Set<ID> customerIds = new Set<ID>();
     
@@ -244,8 +245,12 @@ public with sharing class RetailTaskHelper {
                 String[] businessUserEmailAddress = new String[]{};
                 
                 for(Account accountObj : [Select Id,(Select Id,Email FROM Contacts where Job_Title__c ='Management - F&I Business Manager') FROM Account where Id IN:dealerIds]){
-                    for(Contact contactObj : accountObj.Contacts){
-                            businessUserEmailAddress.add(contactObj.Email);
+                    for(Contact contactObj : accountObj.Contacts)
+                    {
+                        if(contactObj.Email != null && contactObj.Email != '')
+                        {
+                            businessUserEmailAddress.add(contactObj.Email);                            
+                        }
                     }
                  }
                  
@@ -334,4 +339,94 @@ public with sharing class RetailTaskHelper {
     // End of added part, Polaris Yu 2013-8-23
             }
         }
+    //Update Finance and Insurance Status of Account
+    public static void upadteAccountFinancstatusafterInsertUpadte(List<Retail_task__c> retasklist)
+    {
+        set<id> accid = new set<id>();
+        List<Account> acclist = new List<Account>();
+        List<Account> updateacclist = new List<Account>();
+        Id insurancerecordId = Schema.sObjectType.Retail_task__c.getRecordTypeInfosByName().get('Insurance').getRecordTypeId();
+        for(Retail_task__c r : retasklist)
+        {
+            if(r.RecordTypeId == insurancerecordId)
+               {
+                   accid.add(r.Account__c);
+               }            
+        }
+        if(!accid.isEmpty())
+        {
+            acclist = [select id,Insurance_Status__c from Account where ID IN: accid];
+        }
+        if(!acclist.isEmpty())
+        {
+            for(Account a : acclist)
+            {
+                a.Insurance_Status__c = 'Customer';
+                updateacclist.add(a);
+            }
+        }
+        update updateacclist;
     }
+    
+    //Update PC,CV,Van Status of Account
+    public static void upadteAccountafterInsertUpadte(List<Retail_task__c> tasklist)
+    {
+        set<id> accountid = new set<id>();
+        set<id> vehicleid = new set<id>();
+        string vehiclegroup;
+        List<Vehicle__c> vechlist = new List<Vehicle__c>();
+        List<Account> acclist = new List<Account>();
+        List<Account> updateacclist = new List<Account>();
+        map<id,string> vehgroupmap = new map<id,string>();
+        Id servicerecordId = Schema.sObjectType.Retail_task__c.getRecordTypeInfosByName().get('Service').getRecordTypeId();
+        Id contractrecordId = Schema.sObjectType.Retail_task__c.getRecordTypeInfosByName().get('Contract').getRecordTypeId();
+        for(Retail_task__c r : tasklist)
+        {
+            if(r.RecordTypeId == servicerecordId || r.RecordTypeId == contractrecordId)
+            {
+                accountid.add(r.Account__c);
+                vehicleid.add(r.Related_Vehicle__c);
+            }
+        }
+        if(!vehicleid.isEmpty())
+        {
+            vechlist = [select id,Vehicle_group__c from vehicle__c where ID IN : vehicleid];
+        }
+        if(!accountid.isEmpty())
+        {
+            acclist = [select id, PC_Status__c, VAN_Status__c, CV_Status__c from Account where ID IN :accountid];
+        }
+        if(!vechlist.isEmpty())
+        {
+            for(vehicle__c v :vechlist)
+            {
+                vehgroupmap.put(v.Id ,v.Vehicle_Group__c);
+            }
+        }
+        for(Account acc : acclist)
+        {
+            for(Retail_Task__c re : tasklist)
+            {
+                if(re.Account__c == acc.Id)
+                {
+                    vehiclegroup = vehgroupmap.get(re.Related_Vehicle__c);
+                    if(vehiclegroup == 'PC' && acc.PC_Status__c != 'Customer')
+                    {
+                        acc.PC_Status__c = 'Service Only';
+                    }
+                    else if(vehiclegroup == 'CV' && acc.CV_Status__c != 'Customer')
+                    {
+                        acc.CV_Status__c = 'Service Only';
+                    }
+                    else if(vehiclegroup == 'Van' && acc.VAN_Status__c != 'Customer')
+                    {
+                        acc.VAN_Status__c = 'Service Only';
+                    }
+                    updateacclist.add(acc);
+                }
+            }
+        }
+        update updateacclist;
+    }
+
+}
